--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=sql100.epizy.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=epiz_30502019_ferreteria
-DB_USERNAME=epiz_30502019
-DB_PASSWORD=70s1qUKqBspP
+DB_DATABASE=ferreteria
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
